--- a/HF.css
+++ b/HF.css
@@ -318,3 +318,58 @@ body {
         font-size: 10px;
     }
 }
+
+
+
+/* Mode sombre basé sur la préférence système */
+@media (prefers-color-scheme: dark) {
+    /* Couleurs de fond et texte pour le mode sombre */
+    body {
+        background-color: #333;
+        color: #f5f5f5;
+    }
+
+    .site-header {
+        background-color: #0d1f30;
+        color: #fff;
+        border-bottom: 4px solid #151f29;
+    }
+
+    .site-footer {
+        background-color: #0d1f30;
+        color: #fff;
+        border-top: 4px solid #151f29;
+    }
+
+    .nav-link {
+        color: #ffffff;
+    }
+
+    .nav-link:hover {
+        color: #68798d;
+    }
+
+    .nav-link.active {
+        color: #68798d;
+    }
+
+    .darkmode_btn {
+        background-color: #34495e;
+        color: #fff;
+    }
+
+    .darkmode_btn:hover {
+        background-color: #2c3e50;
+    }
+
+    /* Boutons LinkedIn et GitHub */
+    .linkedIn_btn,
+    .github_btn {
+        color: #fff;
+    }
+
+    .linkedIn_btn:hover,
+    .github_btn:hover {
+        background-color: #34495e;
+    }
+}
