--- a/acceuil.css
+++ b/acceuil.css
@@ -237,7 +237,7 @@
     }
 
     .progress-bar {
-        background: linear-gradient(90deg, #798a90 0%, #687376 100%);
+        background: linear-gradient(90deg, #196581 0%, #6197a7 100%);
         color: #fff;
     }
 
