--- a/acceuil.css
+++ b/acceuil.css
@@ -216,7 +216,7 @@
     .citation {
         background-color: #444444; /* Fond sombre pour la citation */
         color: #aaa; /* Texte clair */
-        border-left: 5px solid #0a4051;
+        border-left: 5px solid #0b262f;
     }
 
     .citation .auteur {
@@ -237,7 +237,7 @@
     }
 
     .progress-bar {
-        background: linear-gradient(90deg, #196581 0%, #6197a7 100%);
+        background: linear-gradient(90deg, #2f4a54 0%, #1a5d74 100%);
         color: #fff;
     }
 
